FIX: hide scrollbar for better aesthetics across browsers

--- a/code/assets/CSS/initialComponents.css
+++ b/code/assets/CSS/initialComponents.css
@@ -669,6 +669,17 @@ footer {
   }
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 /* media queries */
 @media screen and (min-width: 750px) {
   .mobile-menu {
